--- a/src/frontend/register.html
+++ b/src/frontend/register.html
@@ -1,70 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Student Internship Portal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Student Internship Portal - Register</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    },
+                    colors: {
+                        primary: {
+                            50: '#eff6ff',
+                            100: '#dbeafe',
+                            200: '#bfdbfe',
+                            300: '#93c5fd',
+                            400: '#60a5fa',
+                            500: '#3b82f6',
+                            600: '#2563eb',
+                            700: '#1d4ed8',
+                            800: '#1e40af',
+                            900: '#1e3a8a',
+                            950: '#172554',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">💼 Internship Portal</a>
+
+<body class="bg-slate-50 font-sans antialiased text-slate-900 min-h-screen flex flex-col">
+    <!-- Navbar -->
+    <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 z-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16 items-center">
+                <div class="flex-shrink-0 flex items-center gap-2">
+                    <span class="text-2xl">💼</span>
+                    <a href="index.html"
+                        class="font-bold text-xl tracking-tight text-slate-900 hover:text-primary-600 transition-colors">Internship
+                        Portal</a>
+                </div>
+                <div class="flex space-x-8 items-center">
+                    <a href="index.html"
+                        class="text-sm font-medium text-slate-600 hover:text-primary-600 transition-colors">Home</a>
+                    <a href="login.html"
+                        class="text-sm font-medium text-slate-600 hover:text-primary-600 transition-colors">Login</a>
+                </div>
+            </div>
         </div>
     </nav>
 
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6 col-lg-5">
-                <div class="card shadow">
-                    <div class="card-body p-5">
-                        <h2 class="card-title text-center mb-4">Student Registration</h2>
-                        <form id="registerForm">
-                            <div class="mb-3">
-                                <label for="name" class="form-label">Full Name</label>
-                                <input type="text" class="form-control" id="name" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="email" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="course" class="form-label">Course</label>
-                                <input type="text" class="form-control" id="course" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="year" class="form-label">Year</label>
-                                <select class="form-control" id="year" required>
-                                    <option value="">Select Year</option>
-                                    <option value="1">Year 1</option>
-                                    <option value="2">Year 2</option>
-                                    <option value="3">Year 3</option>
-                                    <option value="4">Year 4</option>
-                                </select>
-                            </div>
-                            <div class="d-grid">
-                                <button type="submit" class="btn btn-primary">Register</button>
-                            </div>
-                        </form>
-                        <div class="text-center mt-3">
-                            <p>Already have an account? <a href="login.html">Login here</a></p>
+    <!-- Register Content -->
+    <div class="flex-grow flex items-center justify-center px-4 py-12 sm:px-6 lg:px-8 relative overflow-hidden">
+        <!-- Background Elements -->
+        <div class="absolute top-0 left-1/2 -translate-x-1/2 w-full h-full z-0 pointer-events-none opacity-40">
+            <div
+                class="absolute top-10 right-20 w-80 h-80 bg-primary-200 rounded-full mix-blend-multiply filter blur-3xl animate-blob">
+            </div>
+            <div
+                class="absolute bottom-10 left-20 w-80 h-80 bg-indigo-200 rounded-full mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+            </div>
+        </div>
+
+        <div class="max-w-xl w-full space-y-8 bg-white p-8 rounded-2xl shadow-xl border border-slate-100 relative z-10">
+            <div>
+                <h2 class="mt-2 text-center text-3xl font-bold tracking-tight text-slate-900">Create your account</h2>
+                <p class="mt-2 text-center text-sm text-slate-600">
+                    Join us to find your perfect internship
+                </p>
+            </div>
+
+            <div id="alertPlaceholder"></div>
+
+            <div class="flex justify-center space-x-4 mb-6">
+                <button type="button" id="btnStudent"
+                    class="px-6 py-2 text-sm font-medium rounded-full transition-all focus:outline-none bg-primary-600 text-white shadow-md">
+                    Student
+                </button>
+                <button type="button" id="btnAdmin"
+                    class="px-6 py-2 text-sm font-medium rounded-full transition-all focus:outline-none bg-slate-100 text-slate-600 hover:bg-slate-200">
+                    Employer/Admin
+                </button>
+            </div>
+
+            <form id="registerForm" class="space-y-6">
+                <!-- Role Hidden Field -->
+                <input type="hidden" id="role" value="student">
+
+                <div class="grid grid-cols-1 gap-y-6 gap-x-4">
+                    <div>
+                        <label for="name" class="block text-sm font-medium text-slate-700">Full Name</label>
+                        <div class="mt-1">
+                            <input type="text" id="name" required
+                                class="appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm transition-shadow">
                         </div>
-                        <div id="error-message" class="alert alert-danger mt-3" style="display: none;"></div>
-                        <div id="success-message" class="alert alert-success mt-3" style="display: none;"></div>
+                    </div>
+
+                    <div>
+                        <label for="email" class="block text-sm font-medium text-slate-700">Email Address</label>
+                        <div class="mt-1">
+                            <input type="email" id="email" required
+                                class="appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm transition-shadow">
+                        </div>
+                    </div>
+
+                    <div>
+                        <label for="password" class="block text-sm font-medium text-slate-700">Password</label>
+                        <div class="mt-1">
+                            <input type="password" id="password" required
+                                class="appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm transition-shadow">
+                        </div>
+                    </div>
+
+                    <div id="studentFields" class="space-y-6">
+                        <div>
+                            <label for="course" class="block text-sm font-medium text-slate-700">Course / Major</label>
+                            <div class="mt-1">
+                                <input type="text" id="course"
+                                    class="appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm transition-shadow">
+                            </div>
+                        </div>
+                        <div>
+                            <label for="year" class="block text-sm font-medium text-slate-700">Year of Study</label>
+                            <div class="mt-1">
+                                <input type="number" id="year" min="1" max="5"
+                                    class="appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm transition-shadow">
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+                <div>
+                    <button type="submit"
+                        class="group relative w-full flex justify-center py-2.5 px-4 border border-transparent text-sm font-semibold rounded-lg text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition-all shadow-md hover:shadow-lg">
+                        Register Account
+                    </button>
+                </div>
+            </form>
+
+            <div class="text-center mt-4">
+                <p class="text-sm text-slate-600">
+                    Already have an account?
+                    <a href="login.html"
+                        class="font-medium text-primary-600 hover:text-primary-500 hover:underline">Login here</a>
+                </p>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/api.js"></script>
     <script src="js/register.js"></script>
 </body>
-</html>
 
+</html>
