--- a/src/frontend/admin-dashboard.html
+++ b/src/frontend/admin-dashboard.html
@@ -1,99 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Internship Portal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    },
+                    colors: {
+                        primary: {
+                            50: '#eff6ff',
+                            100: '#dbeafe',
+                            200: '#bfdbfe',
+                            300: '#93c5fd',
+                            400: '#60a5fa',
+                            500: '#3b82f6',
+                            600: '#2563eb',
+                            700: '#1d4ed8',
+                            800: '#1e40af',
+                            900: '#1e3a8a',
+                            950: '#172554',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
     <link rel="stylesheet" href="css/style.css">
+    <style type="text/tailwindcss">
+        @layer utilities {
+            .glass-card {
+                @apply bg-white rounded-2xl shadow-sm border border-slate-100;
+            }
+        }
+    </style>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">💼 Internship Portal - Admin</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="admin-dashboard.html">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="admin-internships.html">Manage Internships</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="admin-applications.html">Applications</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="logoutBtn">Logout</a>
-                    </li>
-                </ul>
+
+<body class="bg-slate-50 font-sans antialiased text-slate-900 min-h-screen">
+    <!-- Navbar -->
+    <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 z-50 sticky top-0">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16 items-center">
+                <div class="flex-shrink-0 flex items-center gap-2">
+                    <span class="text-2xl">💼</span>
+                    <a href="index.html"
+                        class="font-bold text-xl tracking-tight text-slate-900 hover:text-primary-600 transition-colors">Internship
+                        Portal <span
+                            class="bg-slate-100 text-slate-600 text-xs px-2 py-0.5 rounded-full ml-2 align-middle border border-slate-200">Admin</span></a>
+                </div>
+                <div class="hidden md:flex space-x-8 items-center">
+                    <a href="admin-dashboard.html" class="text-sm font-medium text-primary-600">Dashboard</a>
+                    <a href="admin-internships.html"
+                        class="text-sm font-medium text-slate-600 hover:text-primary-600 transition-colors">Manage
+                        Internships</a>
+                    <a href="admin-applications.html"
+                        class="text-sm font-medium text-slate-600 hover:text-primary-600 transition-colors">Applications</a>
+                    <a href="#" id="logoutBtn"
+                        class="text-sm font-medium px-4 py-2 bg-slate-100 text-slate-700 rounded-full hover:bg-slate-200 transition-all">Logout</a>
+                </div>
+                <!-- Mobile menu button -->
+                <div class="md:hidden flex items-center">
+                    <button
+                        class="mobile-menu-button p-2 rounded-md text-slate-600 hover:text-slate-900 focus:outline-none">
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+                </div>
             </div>
+        </div>
+        <!-- Mobile Menu -->
+        <div class="mobile-menu hidden md:hidden bg-white border-t border-gray-100">
+            <a href="admin-dashboard.html"
+                class="block py-3 px-4 text-sm bg-primary-50 text-primary-600 font-medium">Dashboard</a>
+            <a href="admin-internships.html" class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Manage
+                Internships</a>
+            <a href="admin-applications.html"
+                class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Applications</a>
+            <a href="#" id="mobileLogoutBtn" class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Logout</a>
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <div class="row mb-4">
-            <div class="col-12">
-                <h2>Admin Dashboard</h2>
-                <p class="text-muted">Welcome, <span id="admin-name"></span></p>
-            </div>
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+        <div class="mb-8">
+            <h1 class="text-2xl font-bold text-slate-900">Admin Dashboard</h1>
+            <p class="text-slate-500">Welcome, <span id="admin-name" class="font-medium text-slate-700"></span></p>
         </div>
 
         <!-- Statistics Cards -->
-        <div class="row mb-4">
-            <div class="col-md-3 mb-3">
-                <div class="card bg-primary text-white">
-                    <div class="card-body">
-                        <h5 class="card-title">Total Internships</h5>
-                        <h2 id="stat-total-internships">0</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-8">
+            <div class="glass-card p-6 border-l-4 border-l-blue-500">
+                <div class="flex items-center">
+                    <div class="p-3 rounded-full bg-blue-50 text-blue-500 mr-4">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
+                            </path>
+                        </svg>
+                    </div>
+                    <div>
+                        <p class="text-sm font-medium text-slate-500">Total Internships</p>
+                        <h2 class="text-2xl font-bold text-slate-900" id="stat-total-internships">0</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-3">
-                <div class="card bg-info text-white">
-                    <div class="card-body">
-                        <h5 class="card-title">Total Applications</h5>
-                        <h2 id="stat-total-applications">0</h2>
+
+            <div class="glass-card p-6 border-l-4 border-l-cyan-500">
+                <div class="flex items-center">
+                    <div class="p-3 rounded-full bg-cyan-50 text-cyan-500 mr-4">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z">
+                            </path>
+                        </svg>
+                    </div>
+                    <div>
+                        <p class="text-sm font-medium text-slate-500">Total Applications</p>
+                        <h2 class="text-2xl font-bold text-slate-900" id="stat-total-applications">0</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-3">
-                <div class="card bg-warning text-white">
-                    <div class="card-body">
-                        <h5 class="card-title">Pending</h5>
-                        <h2 id="stat-pending">0</h2>
+
+            <div class="glass-card p-6 border-l-4 border-l-yellow-500">
+                <div class="flex items-center">
+                    <div class="p-3 rounded-full bg-yellow-50 text-yellow-500 mr-4">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                        </svg>
+                    </div>
+                    <div>
+                        <p class="text-sm font-medium text-slate-500">Pending</p>
+                        <h2 class="text-2xl font-bold text-slate-900" id="stat-pending">0</h2>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-3">
-                <div class="card bg-success text-white">
-                    <div class="card-body">
-                        <h5 class="card-title">Approved</h5>
-                        <h2 id="stat-approved">0</h2>
+
+            <div class="glass-card p-6 border-l-4 border-l-green-500">
+                <div class="flex items-center">
+                    <div class="p-3 rounded-full bg-green-50 text-green-500 mr-4">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                        </svg>
+                    </div>
+                    <div>
+                        <p class="text-sm font-medium text-slate-500">Approved</p>
+                        <h2 class="text-2xl font-bold text-slate-900" id="stat-approved">0</h2>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- Chart -->
-        <div class="row mb-4">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Application Statistics</h5>
-                        <canvas id="statsChart"></canvas>
-                    </div>
-                </div>
+        <div class="glass-card p-6">
+            <h5 class="text-lg font-bold text-slate-900 mb-6">Application Statistics</h5>
+            <div class="w-full h-80">
+                <canvas id="statsChart"></canvas>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="js/api.js"></script>
     <script src="js/admin-dashboard.js"></script>
-</body>
-</html>
+    <script>
+        // Mobile menu toggle
+        const btn = document.querySelector('button.mobile-menu-button');
+        const menu = document.querySelector('.mobile-menu');
 
+        btn.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+        });
+
+        const mobileLogout = document.getElementById('mobileLogoutBtn');
+        if (mobileLogout) mobileLogout.addEventListener('click', (e) => { e.preventDefault(); api.logout(); });
+    </script>
+</body>
+
+</html>
