--- a/src/frontend/admin-internships.html
+++ b/src/frontend/admin-internships.html
@@ -1,97 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Internships - Admin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    },
+                    colors: {
+                        primary: {
+                            50: '#eff6ff',
+                            100: '#dbeafe',
+                            200: '#bfdbfe',
+                            300: '#93c5fd',
+                            400: '#60a5fa',
+                            500: '#3b82f6',
+                            600: '#2563eb',
+                            700: '#1d4ed8',
+                            800: '#1e40af',
+                            900: '#1e3a8a',
+                            950: '#172554',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
     <link rel="stylesheet" href="css/style.css">
+    <style type="text/tailwindcss">
+        @layer utilities {
+            .glass-card {
+                @apply bg-white rounded-2xl shadow-sm border border-slate-100;
+            }
+        }
+    </style>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">💼 Internship Portal - Admin</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="admin-dashboard.html">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="admin-internships.html">Manage Internships</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="admin-applications.html">Applications</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="logoutBtn">Logout</a>
-                    </li>
-                </ul>
+
+<body class="bg-slate-50 font-sans antialiased text-slate-900 min-h-screen">
+    <!-- Navbar -->
+    <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 z-50 sticky top-0">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16 items-center">
+                <div class="flex-shrink-0 flex items-center gap-2">
+                    <span class="text-2xl">💼</span>
+                    <a href="index.html"
+                        class="font-bold text-xl tracking-tight text-slate-900 hover:text-primary-600 transition-colors">Internship
+                        Portal <span
+                            class="bg-slate-100 text-slate-600 text-xs px-2 py-0.5 rounded-full ml-2 align-middle border border-slate-200">Admin</span></a>
+                </div>
+                <div class="hidden md:flex space-x-8 items-center">
+                    <a href="admin-dashboard.html"
+                        class="text-sm font-medium text-slate-600 hover:text-primary-600 transition-colors">Dashboard</a>
+                    <a href="admin-internships.html" class="text-sm font-medium text-primary-600">Manage Internships</a>
+                    <a href="admin-applications.html"
+                        class="text-sm font-medium text-slate-600 hover:text-primary-600 transition-colors">Applications</a>
+                    <a href="#" id="logoutBtn"
+                        class="text-sm font-medium px-4 py-2 bg-slate-100 text-slate-700 rounded-full hover:bg-slate-200 transition-all">Logout</a>
+                </div>
+                <!-- Mobile menu button -->
+                <div class="md:hidden flex items-center">
+                    <button
+                        class="mobile-menu-button p-2 rounded-md text-slate-600 hover:text-slate-900 focus:outline-none">
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+                </div>
             </div>
+        </div>
+        <!-- Mobile Menu -->
+        <div class="mobile-menu hidden md:hidden bg-white border-t border-gray-100">
+            <a href="admin-dashboard.html"
+                class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Dashboard</a>
+            <a href="admin-internships.html"
+                class="block py-3 px-4 text-sm bg-primary-50 text-primary-600 font-medium">Manage Internships</a>
+            <a href="admin-applications.html"
+                class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Applications</a>
+            <a href="#" id="mobileLogoutBtn" class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Logout</a>
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <div class="row mb-4">
-            <div class="col-12 d-flex justify-content-between align-items-center">
-                <h2>Manage Internships</h2>
-                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createInternshipModal">
-                    + Create New Internship
-                </button>
-            </div>
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+        <div class="flex justify-between items-center mb-8">
+            <h1 class="text-2xl font-bold text-slate-900">Manage Internships</h1>
+            <button id="openCreateModal"
+                class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-lg text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 shadow-sm transition-all">
+                + Create New Internship
+            </button>
         </div>
 
-        <div id="internships-container" class="row">
+        <div id="internships-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- Internships will be loaded here -->
+            <div class="col-span-full text-center py-12">
+                <div
+                    class="inline-block animate-spin rounded-full h-8 w-8 border-4 border-primary-500 border-t-transparent">
+                </div>
+                <p class="mt-2 text-slate-500">Loading internships...</p>
+            </div>
         </div>
     </div>
 
     <!-- Create Internship Modal -->
-    <div class="modal fade" id="createInternshipModal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Create New Internship</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+    <div id="createInternshipModal" class="fixed inset-0 z-50 overflow-y-auto hidden" aria-labelledby="modal-title"
+        role="dialog" aria-modal="true">
+        <!-- Backdrop -->
+        <div class="fixed inset-0 bg-slate-900/50 backdrop-blur-sm transition-opacity opacity-0" id="modalBackdrop">
+        </div>
+
+        <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
+            <!-- Center trick -->
+            <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+
+            <!-- Modal Panel -->
+            <div class="relative inline-block align-bottom bg-white rounded-2xl text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg w-full scale-95 opacity-0"
+                id="modalPanel">
+                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                    <div class="sm:flex sm:items-start">
+                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left w-full">
+                            <h3 class="text-lg leading-6 font-semibold text-slate-900" id="modal-title">Create New
+                                Internship</h3>
+                            <div class="mt-2 text-sm text-slate-500">
+                                Fill in the details below to post a new internship opportunity.
+                            </div>
+
+                            <form id="createInternshipForm" class="mt-6 space-y-4">
+                                <div>
+                                    <label for="title" class="block text-sm font-medium text-slate-700">Title</label>
+                                    <input type="text" id="title" required
+                                        class="mt-1 appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm">
+                                </div>
+                                <div>
+                                    <label for="company"
+                                        class="block text-sm font-medium text-slate-700">Company</label>
+                                    <input type="text" id="company" required
+                                        class="mt-1 appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm">
+                                </div>
+                                <div>
+                                    <label for="description"
+                                        class="block text-sm font-medium text-slate-700">Description</label>
+                                    <textarea id="description" rows="4" required
+                                        class="mt-1 appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm"></textarea>
+                                </div>
+                                <div class="grid grid-cols-2 gap-4">
+                                    <div>
+                                        <label for="duration"
+                                            class="block text-sm font-medium text-slate-700">Duration</label>
+                                        <input type="text" id="duration" placeholder="e.g. 3 months" required
+                                            class="mt-1 appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm">
+                                    </div>
+                                    <div>
+                                        <label for="slots"
+                                            class="block text-sm font-medium text-slate-700">Slots</label>
+                                        <input type="number" id="slots" min="1" required
+                                            class="mt-1 appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm">
+                                    </div>
+                                </div>
+                                <div id="create-error" class="hidden p-3 bg-red-50 text-red-700 rounded-md text-sm">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="modal-body">
-                    <form id="createInternshipForm">
-                        <div class="mb-3">
-                            <label for="title" class="form-label">Title</label>
-                            <input type="text" class="form-control" id="title" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="company" class="form-label">Company</label>
-                            <input type="text" class="form-control" id="company" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="description" class="form-label">Description</label>
-                            <textarea class="form-control" id="description" rows="5" required></textarea>
-                        </div>
-                        <div class="mb-3">
-                            <label for="duration" class="form-label">Duration</label>
-                            <input type="text" class="form-control" id="duration" placeholder="e.g., 3 months" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="slots" class="form-label">Available Slots</label>
-                            <input type="number" class="form-control" id="slots" min="1" required>
-                        </div>
-                        <div id="create-error" class="alert alert-danger" style="display: none;"></div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="submitInternship">Create Internship</button>
+                <div class="bg-slate-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                    <button type="button" id="submitInternship"
+                        class="w-full inline-flex justify-center rounded-lg border border-transparent shadow-sm px-4 py-2 bg-primary-600 text-base font-medium text-white hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 sm:ml-3 sm:w-auto sm:text-sm transition-all">
+                        Create Internship
+                    </button>
+                    <button type="button" id="cancelModal"
+                        class="mt-3 w-full inline-flex justify-center rounded-lg border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-slate-700 hover:bg-slate-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm transition-all">
+                        Cancel
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/api.js"></script>
     <script src="js/admin-internships.js"></script>
-</body>
-</html>
+    <script>
+        // Mobile menu toggle
+        const btn = document.querySelector('button.mobile-menu-button');
+        const menu = document.querySelector('.mobile-menu');
 
+        btn.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+        });
+
+        const mobileLogout = document.getElementById('mobileLogoutBtn');
+        if (mobileLogout) mobileLogout.addEventListener('click', (e) => { e.preventDefault(); api.logout(); });
+    </script>
+</body>
+
+</html>
