--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,60 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Internship Portal - Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    },
+                    colors: {
+                        primary: {
+                            50: '#eff6ff',
+                            100: '#dbeafe',
+                            200: '#bfdbfe',
+                            300: '#93c5fd',
+                            400: '#60a5fa',
+                            500: '#3b82f6',
+                            600: '#2563eb',
+                            700: '#1d4ed8',
+                            800: '#1e40af',
+                            900: '#1e3a8a',
+                            950: '#172554',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
     <link rel="stylesheet" href="css/style.css">
+    <style type="text/tailwindcss">
+        @layer utilities {
+            .glass-nav {
+                @apply bg-white/80 backdrop-blur-md border-b border-gray-100;
+            }
+        }
+    </style>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">💼 Internship Portal</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="register.html">Register</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-                <h1 class="display-4 mb-4">Welcome to Student Internship Portal</h1>
-                <p class="lead mb-4">Find and apply for the best internship opportunities</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-                    <a href="register.html" class="btn btn-primary btn-lg">Get Started</a>
-                    <a href="login.html" class="btn btn-outline-primary btn-lg">Login</a>
+<body class="bg-slate-50 text-slate-900 font-sans antialiased selection:bg-primary-100 selection:text-primary-900">
+    <nav class="glass-nav fixed w-full z-50 transition-all duration-300">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16 items-center">
+                <div class="flex-shrink-0 flex items-center gap-2">
+                    <span class="text-2xl">💼</span>
+                    <a href="index.html"
+                        class="font-bold text-xl tracking-tight text-slate-900 hover:text-primary-600 transition-colors">Internship
+                        Portal</a>
+                </div>
+                <div id="desktop-nav" class="hidden md:flex space-x-8 items-center">
+                    <a href="index.html" class="text-sm font-medium text-primary-600">Home</a>
+                    <a href="login.html"
+                        class="text-sm font-medium text-slate-600 hover:text-primary-600 transition-colors">Login</a>
+                    <a href="register.html"
+                        class="text-sm font-medium px-4 py-2 bg-primary-600 text-white rounded-full hover:bg-primary-700 transition-all shadow-md hover:shadow-lg">Register</a>
+                </div>
+                <!-- Mobile menu button -->
+                <div class="md:hidden flex items-center">
+                    <button
+                        class="mobile-menu-button p-2 rounded-md text-slate-600 hover:text-slate-900 focus:outline-none">
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
                 </div>
             </div>
         </div>
+        <!-- Mobile Menu -->
+        <div id="mobile-nav" class="mobile-menu hidden md:hidden bg-white border-t border-gray-100">
+            <a href="index.html" class="block py-3 px-4 text-sm hover:bg-slate-50 text-primary-600 font-medium">Home</a>
+            <a href="login.html" class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Login</a>
+            <a href="register.html" class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Register</a>
+        </div>
+    </nav>
 
-        <div class="row mt-5">
-            <div class="col-12">
-                <h2 class="text-center mb-4">Available Internships</h2>
-                <div id="internships-container" class="row">
-                   
+    <!-- Hero Section -->
+    <div class="relative pt-32 pb-20 lg:pt-40 lg:pb-28 overflow-hidden">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10 text-center">
+            <h1 class="text-5xl md:text-6xl font-extrabold tracking-tight text-slate-900 mb-6 drop-shadow-sm">
+                Find Your Dream <span
+                    class="text-transparent bg-clip-text bg-gradient-to-r from-primary-600 to-indigo-600">Internship</span>
+            </h1>
+            <p class="mt-4 max-w-2xl mx-auto text-xl text-slate-600 mb-10">
+                Connect with top companies and kickstart your career. Browse hundreds of opportunities curated just for
+                you.
+            </p>
+            <div class="flex justify-center gap-4">
+                <a href="register.html"
+                    class="px-8 py-3.5 text-base font-semibold text-white bg-primary-600 rounded-full hover:bg-primary-700 md:text-lg transition-all shadow-lg hover:shadow-primary-500/30 hover:-translate-y-0.5">
+                    Get Started
+                </a>
+                <a href="login.html"
+                    class="px-8 py-3.5 text-base font-semibold text-slate-700 bg-white border border-slate-200 rounded-full hover:bg-slate-50 md:text-lg transition-all shadow-sm hover:shadow-md hover:-translate-y-0.5">
+                    Login
+                </a>
+            </div>
+        </div>
+
+        <!-- Decorative blobs -->
+        <div class="absolute top-0 left-1/2 -translate-x-1/2 w-full h-full z-0 pointer-events-none opacity-40">
+            <div
+                class="absolute top-20 left-10 w-72 h-72 bg-primary-300 rounded-full mix-blend-multiply filter blur-3xl animate-blob">
+            </div>
+            <div
+                class="absolute top-20 right-10 w-72 h-72 bg-indigo-300 rounded-full mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+            </div>
+            <div
+                class="absolute -bottom-8 left-1/2 w-72 h-72 bg-purple-300 rounded-full mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+            </div>
+        </div>
+    </div>
+
+    <!-- Internships Section -->
+    <div class="bg-white py-20 border-t border-slate-100">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl font-bold text-slate-900 sm:text-4xl">Available Opportunities</h2>
+                <p class="mt-4 text-lg text-slate-600">Explore the latest internships pending your application.</p>
+            </div>
+
+            <div id="internships-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- Content will be loaded dynamically -->
+                <div class="col-span-full text-center py-12">
+                    <div
+                        class="inline-block animate-spin rounded-full h-8 w-8 border-4 border-primary-500 border-t-transparent">
+                    </div>
+                    <p class="mt-2 text-slate-500">Loading opportunities...</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/api.js"></script>
     <script src="js/index.js"></script>
-</body>
-</html>
+    <script>
+        // Mobile menu toggle
+        const btn = document.querySelector('button.mobile-menu-button');
+        const menu = document.querySelector('.mobile-menu');
 
+        btn.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+        });
+    </script>
+</body>
+
+</html>
