--- a/src/frontend/internships.html
+++ b/src/frontend/internships.html
@@ -1,80 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Browse Internships - Internship Portal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    },
+                    colors: {
+                        primary: {
+                            50: '#eff6ff',
+                            100: '#dbeafe',
+                            200: '#bfdbfe',
+                            300: '#93c5fd',
+                            400: '#60a5fa',
+                            500: '#3b82f6',
+                            600: '#2563eb',
+                            700: '#1d4ed8',
+                            800: '#1e40af',
+                            900: '#1e3a8a',
+                            950: '#172554',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
     <link rel="stylesheet" href="css/style.css">
+    <style type="text/tailwindcss">
+        @layer utilities {
+            .glass-header {
+                @apply bg-white/90 backdrop-blur-sm border-b border-gray-100;
+            }
+        }
+    </style>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">💼 Internship Portal</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="student-dashboard.html">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="internships.html">Browse Internships</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="logoutBtn">Logout</a>
-                    </li>
-                </ul>
+
+<body class="bg-slate-50 font-sans antialiased text-slate-900 min-h-screen">
+    <!-- Navbar -->
+    <nav class="glass-header sticky top-0 z-40 transition-all duration-300">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16 items-center">
+                <div class="flex-shrink-0 flex items-center gap-2">
+                    <span class="text-2xl">💼</span>
+                    <a href="index.html"
+                        class="font-bold text-xl tracking-tight text-slate-900 hover:text-primary-600 transition-colors">Internship
+                        Portal</a>
+                </div>
+                <div class="hidden md:flex space-x-8 items-center">
+                    <a href="student-dashboard.html"
+                        class="text-sm font-medium text-slate-600 hover:text-primary-600 transition-colors">Dashboard</a>
+                    <a href="internships.html" class="text-sm font-medium text-primary-600">Browse Internships</a>
+                    <a href="#" id="logoutBtn"
+                        class="text-sm font-medium px-4 py-2 bg-slate-100 text-slate-700 rounded-full hover:bg-slate-200 transition-all">Logout</a>
+                </div>
+                <!-- Mobile menu button -->
+                <div class="md:hidden flex items-center">
+                    <button
+                        class="mobile-menu-button p-2 rounded-md text-slate-600 hover:text-slate-900 focus:outline-none">
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+                </div>
             </div>
+        </div>
+        <!-- Mobile Menu -->
+        <div class="mobile-menu hidden md:hidden bg-white border-t border-gray-100">
+            <a href="student-dashboard.html"
+                class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Dashboard</a>
+            <a href="internships.html" class="block py-3 px-4 text-sm bg-primary-50 text-primary-600 font-medium">Browse
+                Internships</a>
+            <a href="#" id="mobileLogoutBtn" class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Logout</a>
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <div class="row mb-4">
-            <div class="col-12">
-                <h2>Available Internships</h2>
-            </div>
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10">
+        <div class="mb-10 text-center">
+            <h2 class="text-3xl font-extrabold text-slate-900 tracking-tight sm:text-4xl">Available Internships</h2>
+            <p class="mt-4 max-w-2xl text-xl text-slate-500 mx-auto">Discover opportunities that match your skills and
+                apply today.</p>
         </div>
 
-        <div id="internships-container" class="row">
+        <div id="internships-container" class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
             <!-- Internships will be loaded here -->
+            <div class="col-span-full text-center py-20">
+                <div
+                    class="inline-block animate-spin rounded-full h-8 w-8 border-4 border-primary-500 border-t-transparent">
+                </div>
+                <p class="mt-4 text-slate-500">Loading internships...</p>
+            </div>
         </div>
     </div>
 
     <!-- Application Modal -->
-    <div class="modal fade" id="applicationModal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Apply for Internship</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="applicationForm">
-                        <input type="hidden" id="modal-internship-id">
-                        <div class="mb-3">
-                            <label for="cover-letter" class="form-label">Cover Letter</label>
-                            <textarea class="form-control" id="cover-letter" rows="5" required></textarea>
+    <div id="applicationModal" class="fixed inset-0 z-50 overflow-y-auto hidden" aria-labelledby="modal-title"
+        role="dialog" aria-modal="true">
+        <!-- Backdrop -->
+        <div class="fixed inset-0 bg-slate-900/50 backdrop-blur-sm transition-opacity opacity-0" id="modalBackdrop">
+        </div>
+
+        <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
+            <!-- Center trick -->
+            <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+
+            <!-- Modal Panel -->
+            <div class="relative inline-block align-bottom bg-white rounded-2xl text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg w-full scale-95 opacity-0"
+                id="modalPanel">
+                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                    <div class="sm:flex sm:items-start">
+                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left w-full">
+                            <h3 class="text-lg leading-6 font-semibold text-slate-900" id="modal-title">Apply for
+                                Internship</h3>
+                            <div class="mt-2 text-sm text-slate-500" id="modal-subtitle">
+                                Complete the form below to submit your application.
+                            </div>
+
+                            <form id="applicationForm" class="mt-6 space-y-4">
+                                <input type="hidden" id="modal-internship-id">
+                                <div>
+                                    <label for="cover-letter" class="block text-sm font-medium text-slate-700">Cover
+                                        Letter</label>
+                                    <div class="mt-1">
+                                        <textarea id="cover-letter" rows="4" required
+                                            class="appearance-none block w-full px-3 py-2 border border-slate-300 rounded-lg shadow-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500 sm:text-sm"></textarea>
+                                    </div>
+                                    <p class="mt-1 text-xs text-slate-500">Why are you a good fit for this role?</p>
+                                </div>
+                                <div>
+                                    <label for="cv-file" class="block text-sm font-medium text-slate-700">Upload
+                                        CV</label>
+                                    <div
+                                        class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-slate-300 border-dashed rounded-lg hover:border-primary-400 transition-colors">
+                                        <div class="space-y-1 text-center">
+                                            <svg class="mx-auto h-12 w-12 text-slate-400" stroke="currentColor"
+                                                fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                                                <path
+                                                    d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                            </svg>
+                                            <div class="flex text-sm text-slate-600">
+                                                <label for="cv-file"
+                                                    class="relative cursor-pointer bg-white rounded-md font-medium text-primary-600 hover:text-primary-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-primary-500">
+                                                    <span>Upload a file</span>
+                                                    <input id="cv-file" name="cv-file" type="file" class="sr-only"
+                                                        accept=".pdf,.doc,.docx" required
+                                                        onchange="document.getElementById('file-name').textContent = this.files[0].name;">
+                                                </label>
+                                                <p class="pl-1">or drag and drop</p>
+                                            </div>
+                                            <p class="text-xs text-slate-500">PDF, DOC, DOCX up to 10MB</p>
+                                            <p id="file-name" class="text-sm font-medium text-primary-600 mt-2"></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="application-error"
+                                    class="hidden p-3 bg-red-50 text-red-700 rounded-md text-sm"></div>
+                            </form>
                         </div>
-                        <div class="mb-3">
-                            <label for="cv-file" class="form-label">Upload CV (PDF, DOC, DOCX)</label>
-                            <input type="file" class="form-control" id="cv-file" accept=".pdf,.doc,.docx" required>
-                        </div>
-                        <div id="application-error" class="alert alert-danger" style="display: none;"></div>
-                    </form>
+                    </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="submitApplication">Submit Application</button>
+                <div class="bg-slate-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                    <button type="button" id="submitApplication"
+                        class="w-full inline-flex justify-center rounded-lg border border-transparent shadow-sm px-4 py-2 bg-primary-600 text-base font-medium text-white hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 sm:ml-3 sm:w-auto sm:text-sm transition-all">
+                        Submit Application
+                    </button>
+                    <button type="button" id="cancelModal"
+                        class="mt-3 w-full inline-flex justify-center rounded-lg border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-slate-700 hover:bg-slate-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm transition-all">
+                        Cancel
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/api.js"></script>
     <script src="js/internships.js"></script>
-</body>
-</html>
+    <script>
+        // Mobile menu toggle
+        const btn = document.querySelector('button.mobile-menu-button');
+        const menu = document.querySelector('.mobile-menu');
 
+        btn.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+        });
+
+        // Logout logic handled in main JS if exists there, but adding here too for safety
+        const mobileLogout = document.getElementById('mobileLogoutBtn');
+        if (mobileLogout) mobileLogout.addEventListener('click', (e) => { e.preventDefault(); api.logout(); });
+        const desktopLogout = document.getElementById('logoutBtn');
+        if (desktopLogout) desktopLogout.addEventListener('click', (e) => { e.preventDefault(); api.logout(); });
+    </script>
+</body>
+
+</html>
