--- a/src/frontend/student-dashboard.html
+++ b/src/frontend/student-dashboard.html
@@ -1,54 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Dashboard - Internship Portal</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    },
+                    colors: {
+                        primary: {
+                            50: '#eff6ff',
+                            100: '#dbeafe',
+                            200: '#bfdbfe',
+                            300: '#93c5fd',
+                            400: '#60a5fa',
+                            500: '#3b82f6',
+                            600: '#2563eb',
+                            700: '#1d4ed8',
+                            800: '#1e40af',
+                            900: '#1e3a8a',
+                            950: '#172554',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
     <link rel="stylesheet" href="css/style.css">
+    <style type="text/tailwindcss">
+        @layer utilities {
+            .glass-card {
+                @apply bg-white rounded-2xl shadow-sm border border-slate-100;
+            }
+        }
+    </style>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">💼 Internship Portal</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="student-dashboard.html">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="internships.html">Browse Internships</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="logoutBtn">Logout</a>
-                    </li>
-                </ul>
+
+<body class="bg-slate-50 font-sans antialiased text-slate-900 min-h-screen">
+    <!-- Navbar -->
+    <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 z-50 sticky top-0">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16 items-center">
+                <div class="flex-shrink-0 flex items-center gap-2">
+                    <span class="text-2xl">💼</span>
+                    <a href="index.html"
+                        class="font-bold text-xl tracking-tight text-slate-900 hover:text-primary-600 transition-colors">Internship
+                        Portal</a>
+                </div>
+                <div class="hidden md:flex space-x-8 items-center">
+                    <a href="student-dashboard.html" class="text-sm font-medium text-primary-600">Dashboard</a>
+                    <a href="internships.html"
+                        class="text-sm font-medium text-slate-600 hover:text-primary-600 transition-colors">Browse
+                        Internships</a>
+                    <a href="#" id="logoutBtn"
+                        class="text-sm font-medium px-4 py-2 bg-slate-100 text-slate-700 rounded-full hover:bg-slate-200 transition-all">Logout</a>
+                </div>
+                <!-- Mobile menu button -->
+                <div class="md:hidden flex items-center">
+                    <button
+                        class="mobile-menu-button p-2 rounded-md text-slate-600 hover:text-slate-900 focus:outline-none">
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+                </div>
             </div>
+        </div>
+        <!-- Mobile Menu -->
+        <div class="mobile-menu hidden md:hidden bg-white border-t border-gray-100">
+            <a href="student-dashboard.html"
+                class="block py-3 px-4 text-sm bg-primary-50 text-primary-600 font-medium">Dashboard</a>
+            <a href="internships.html" class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Browse
+                Internships</a>
+            <a href="#" id="mobileLogoutBtn" class="block py-3 px-4 text-sm hover:bg-slate-50 text-slate-600">Logout</a>
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <div class="row mb-4">
-            <div class="col-12">
-                <h2>Welcome, <span id="student-name"></span>!</h2>
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+        <div class="glass-card overflow-hidden p-6 md:p-8 mb-8 relative">
+            <div class="relative z-10">
+                <h1 class="text-2xl md:text-3xl font-bold text-slate-900">Welcome back, <span id="student-name"
+                        class="text-primary-600"></span>! 👋</h1>
+                <p class="mt-2 text-slate-600">Track your internship applications and find new opportunities.</p>
+            </div>
+            <!-- Decorative blob -->
+            <div
+                class="absolute top-0 right-0 -mr-20 -mt-20 w-64 h-64 bg-primary-100 rounded-full mix-blend-multiply filter blur-3xl opacity-50">
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-12">
-                <h3 class="mb-3">My Applications</h3>
-                <div id="applications-container">
+        <div class="mb-8 flex items-center justify-between">
+            <h2 class="text-xl font-bold text-slate-900">My Applications</h2>
+            <a href="internships.html"
+                class="hidden sm:inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-primary-600 rounded-lg hover:bg-primary-700 transition-colors shadow-sm">
+                + Apply for more
+            </a>
+        </div>
+
+        <div class="glass-card overflow-hidden">
+            <div id="applications-container" class="divide-y divide-gray-100">
+                <!-- Content loaded via JS -->
+                <div class="p-8 text-center">
+                    <div
+                        class="inline-block animate-spin rounded-full h-8 w-8 border-4 border-primary-500 border-t-transparent">
+                    </div>
+                    <p class="mt-2 text-slate-500">Loading applications...</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/api.js"></script>
     <script src="js/student-dashboard.js"></script>
-</body>
-</html>
+    <script>
+        // Mobile menu toggle
+        const btn = document.querySelector('button.mobile-menu-button');
+        const menu = document.querySelector('.mobile-menu');
 
+        btn.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+        });
+
+        // Logout logic handled in dashboard js mostly, but duplicated here for mobile menu ease if needed or rely on common
+        document.getElementById('mobileLogoutBtn').addEventListener('click', (e) => {
+            e.preventDefault();
+            api.logout();
+        });
+    </script>
+</body>
+
+</html>
